test/spec_vectors/i32/fail/module_68.wat
(module (func (result i32) (i32.sub (i64.const 0) (f32.const 0))))